# AndroidVulkanTriangle

./: AndroidManifest.xml  Cargo.toml  LICENSE.md  README.md  build.sh  package.sh  sym.txt
assets/shaders/: shader.frag  shader.vert  vert.hex
src/: build.rs  callbacks.rs  event.rs  frag.hex  input_queue.rs  lib.rs  log.rs  native_window.rs  sc.sh  shader.c  vk.c  vk.rs
