[package]
name = "rust_vk_main"
version = "0.1.0"
authors = ["atil <atilkurtulmus@gmail.com>"]
edition = "2018"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["dylib"]

[dependencies]

[build-dependencies]
cc = "1.0.59"